--- a/teste.html
+++ b/teste.html
@@ -10,6 +10,71 @@
 
 				<style>
 
+						td {
+
+							height: 25px;
+
+							width: 30px;
+
+							background: #f5f5f5;
+
+							font: 12px verdana;							  
+
+							text-align: center;
+
+						}
+
+						.mes {
+
+								font: bold 12px verdana;
+
+								background: #f5f5f5;
+
+								text-align: center;
+
+								line-height: 25px;							
+
+								height: 25px;
+
+								width: 240px;
+
+						}
+
+						.semana {
+
+								font: bold 12px verdana;
+
+						}
+
+						.dia {
+
+								height: 23px;
+
+								width: 30px;
+
+								padding-top:6px;
+
+								vertical-align:middle;
+
+								position:relative;
+
+						}
+
+						.evento {
+
+								position: relative;
+
+								font: 9px verdana;
+
+								color: #C30;
+
+								position:absolute;
+
+								right: -2px;
+
+								top: -2px;					  
+
+						}
 
 				</style>
 
