--- a/casa.html
+++ b/casa.html
@@ -20,7 +20,7 @@
                     <img src="ima/logo.png">
 
                     <div class="junto">
-                        <a href="login.html">login cadastro</a></p>
+                        <a href="login.html">login/cadastro</a></p>
                         <a href="login.html"><img src="usuario/181549.svg" alt="usuario"></a>
                     </div>
                 </div>
@@ -37,6 +37,7 @@
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="Faq.html">FAQ</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="pacotes.html">Pacotes</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="ambiente.html">Ambiente</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="contato.html">Contato</a></li>
                     
                 </ul>
                 <hr>
